# matchem

./: CMakeLists.txt  main.C  matchem.cpp  matchem.hpp  matchem_common.hpp  matchem_config.cpp  matchem_config.hpp  matchem_exception.hpp  matchem_facade.cpp  matchem_facade.hpp  matchem_kokkos.hpp
tests/: CMakeLists.txt  full_tests.cpp  matchem_catch_main.cpp  tests_common.hpp
